--- a/main.html
+++ b/main.html
@@ -3,11 +3,27 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="movie-container">
+        <img
+            src="https://m.media-amazon.com/images/M/MV5BMTY5Njc2NjYtZmMyNS00ZjM2LTg2OWQtODVkYzhlZTg4M2U2XkEyXkFqcGc@._V1_.jpg"
+            alt="Movie Poster"
+            class="moviePic"
+        >
+
+        <p class="movieDetail">
+            This is an example movie description. It appears in the center of the page,
+            styled beautifully to match the updated IMDb layout. You can add
+            more details to make the page more attractive.
+        </p>
+    </div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
